# seventeen-in

./: Cargo.toml  README.md
data/: translation.json
src/: lib.rs  main.rs  seventeen_strings.rs
