[package]
name = "seventeen-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.9", features = ["macros"] }
once_cell = "1.18.0"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
